--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+.center {
+  margin: auto;
+  width: 50%;
+  border: 3px solid green;
+  padding: 10px;
+}
 .App {
   text-align: center;
 }
@@ -33,6 +39,6 @@
     transform: rotate(0deg);
   }
   to {
-    transform: rotate(360deg);
+    transform: rotate(60deg);
   }
 }
